Started refactoring.
Made it so that the simple messages are now done with aop. Made a new controller service package the session, and put the two services that should be available for both type of users. Rewroked the Refesh service, to get rid of problems, errors.